# 8-Allocator

./: .travis.yml  CMakeLists.txt  README.md
cmake/GetGitRevisionDescription/: CMakeLists.txt
include/: allocator.h  container.h
src/: main.cpp
